--- a/myTracks/proguard.cfg
+++ b/myTracks/proguard.cfg
@@ -92,7 +92,8 @@
 
 # Add the libraries, but ignore warnings about them
 -libraryjars libs
--libraryjars ../MyTracksLib/libs
+# TODO This cannot be found, possibly not necessary and just a leftover?
+#-libraryjars ../MyTracksLib/libs
 -dontwarn com.android.common.**
 -dontwarn com.google.android.googleapps.**
 -dontwarn com.google.android.gsf.**
